NetBSD Problem Report #54300
From gson@gson.org Mon Jun 17 11:27:09 2019
Return-Path: <gson@gson.org>
Received: from mail.netbsd.org (mail.netbsd.org [199.233.217.200])
(using TLSv1.2 with cipher ECDHE-RSA-AES256-GCM-SHA384 (256/256 bits))
(Client CN "mail.NetBSD.org", Issuer "mail.NetBSD.org CA" (not verified))
by mollari.NetBSD.org (Postfix) with ESMTPS id 12A647A179
for <gnats-bugs@gnats.NetBSD.org>; Mon, 17 Jun 2019 11:27:09 +0000 (UTC)
Message-Id: <20190617112704.8BB2D989E14@guava.gson.org>
Date: Mon, 17 Jun 2019 14:27:04 +0300 (EEST)
From: gson@gson.org (Andreas Gustafsson)
Reply-To: gson@gson.org (Andreas Gustafsson)
To: gnats-bugs@NetBSD.org
Subject: lib/libutil/t_snprintb test regression on sparc
X-Send-Pr-Version: 3.95
>Number: 54300
>Category: lib
>Synopsis: lib/libutil/t_snprintb test regression on sparc
>Confidential: no
>Severity: serious
>Priority: high
>Responsible: christos
>State: closed
>Class: sw-bug
>Submitter-Id: net
>Arrival-Date: Mon Jun 17 11:30:01 +0000 2019
>Closed-Date: Sun May 24 09:02:12 +0000 2020
>Last-Modified: Sun May 24 09:02:12 +0000 2020
>Originator: Andreas Gustafsson
>Release: NetBSD-current, source date >= 2019.04.27.17.45.28
>Organization:
>Environment:
System: NetBSD
Architecture: sparc
Machine: sparc
>Description:
Both test cases of the lib/libutil/t_snprintb test are failing on
sparc.
The snprintb test case fails with the message
t_snprintb.c: res != buf (0x1<FOO=0x1=ONE> != 0x1<FOO=0x100000000=ONE>)
and the snprintb_m test case fais with
t_snprintb.c:111: len != res_len
Log output from a recent failure:
http://releng.netbsd.org/b5reports/sparc/2019/2019.06.15.15.22.56/test.html#lib_libutil_t_snprintb_snprintb
The failures started started with with this commit:
2019.04.27.17.45.28 christos src/common/lib/libutil/snprintb.c 1.19
>How-To-Repeat:
>Fix:
>Release-Note:
>Audit-Trail:
Responsible-Changed-From-To: lib-bug-people->christos
Responsible-Changed-By: gson@NetBSD.org
Responsible-Changed-When: Mon, 17 Jun 2019 12:41:58 +0000
Responsible-Changed-Why:
Over to committer.
From: "Christos Zoulas" <christos@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc:
Subject: PR/54300 CVS commit: src/common/lib/libutil
Date: Mon, 17 Jun 2019 13:03:58 -0400
Module Name: src
Committed By: christos
Date: Mon Jun 17 17:03:58 UTC 2019
Modified Files:
src/common/lib/libutil: snprintb.c
Log Message:
PR/54300: Andreas Gustafsson: Remove useless case. should fix
lib/libutil/t_snprintb test regression on sparc
To generate a diff of this commit:
cvs rdiff -u -r1.20 -r1.21 src/common/lib/libutil/snprintb.c
Please note that diffs are not public domain; they are subject to the
copyright notices on the relevant files.
State-Changed-From-To: open->closed
State-Changed-By: gson@NetBSD.org
State-Changed-When: Tue, 18 Jun 2019 13:08:08 +0000
State-Changed-Why:
The test now passes.
State-Changed-From-To: closed->open
State-Changed-By: gson@NetBSD.org
State-Changed-When: Sat, 10 Aug 2019 20:00:28 +0000
State-Changed-Why:
The snprintb_m test case was fixed, but the snprintb test case was not.
From: Andreas Gustafsson <gson@gson.org>
To: gnats-bugs@NetBSD.org
Cc: martin@NetBSD.org
Subject: Re: lib/54300 (lib/libutil/t_snprintb test regression on sparc)
Date: Tue, 17 Sep 2019 21:39:59 +0300
This is also failing on ARM, both under qemu and on real
hardware as seen in martin's test logs:
http://www.netbsd.org/~martin/evbarm-atf/273_atf.html#lib_libutil_t_snprintb_snprintb
--
Andreas Gustafsson, gson@gson.org
From: Andreas Gustafsson <gson@gson.org>
To: gnats-bugs@netbsd.org
Cc:
Subject: Re: lib/54300: lib/libutil/t_snprintb test regression on sparc
Date: Sun, 8 Dec 2019 17:38:52 +0200
Since Christos' commits of Dec 6, there are new failures of the
snprintb tests on i386 and amd64:
http://releng.netbsd.org/b5reports/i386/2019/2019.12.06.21.45.14/test.html#lib_libutil_t_snprintb_snprintb
http://releng.netbsd.org/b5reports/i386/2019/2019.12.06.21.45.14/test.html#lib_libutil_t_snprintb_snprintb
--
Andreas Gustafsson, gson@gson.org
From: Andreas Gustafsson <gson@gson.org>
To: gnats-bugs@netbsd.org
Cc:
Subject: Re: lib/54300: lib/libutil/t_snprintb test regression on sparc
Date: Sun, 8 Dec 2019 17:42:52 +0200
> http://releng.netbsd.org/b5reports/i386/2019/2019.12.06.21.45.14/test.html#lib_libutil_t_snprintb_snprintb
> http://releng.netbsd.org/b5reports/i386/2019/2019.12.06.21.45.14/test.html#lib_libutil_t_snprintb_snprintb
The second link should have been:
http://www.gson.org/netbsd/bugs/build/amd64-baremetal/2019/2019.12.06.19.37.43/test.html#lib_libutil_t_snprintb_snprintb
--
Andreas Gustafsson, gson@gson.org
State-Changed-From-To: open->closed
State-Changed-By: gson@NetBSD.org
State-Changed-When: Sun, 24 May 2020 09:02:12 +0000
State-Changed-Why:
The snprintb tests have been passing for some time now.
>Unformatted:
(Contact us)
$NetBSD: query-full-pr,v 1.49 2026/05/14 01:52:41 riastradh Exp $
$NetBSD: gnats_config.sh,v 1.10 2026/05/13 22:00:09 riastradh Exp $
Copyright © 1994-2026
The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.