PR/54300: Andreas Gustafsson: Remove useless case. should fix lib/libutil/t_snprintb test regression on sparc